Fixed height issue on small devices

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -67,9 +67,13 @@ body {
   margin: 0 auto;
   display: flex;
   flex-flow: column;
-  height: 90vh;
   align-items: center;
   justify-content: center;
+
+  a.back {
+    padding-top: 20px;
+    position: absolute;
+  }
 }
 
 .layout-public .ui.card {
